feat: implement Dropbox OAuth for account management, add file upload/download pages, and integrate video player assets with Cloudflare Pages configuration.

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,16 @@
 # Dapatkan dari https://www.dropbox.com/developers/apps
 
 # App Key (dari App Console)
-DROPBOX_APP_KEY=your_app_key_here
+DROPBOX_APP_KEY=your_dropbox_app_key
 
 # App Secret (dari App Console)
-DROPBOX_APP_SECRET=your_app_secret_here
+DROPBOX_APP_SECRET=your_dropbox_app_secret
 
-# Refresh Token (dapatkan dari OAuth flow, lihat README)
-DROPBOX_REFRESH_TOKEN=your_refresh_token_here
+# OAuth Redirect URI (tambahkan ini juga di App Console -> Settings -> OAuth 2 -> Redirect URIs)
+# Untuk production, ganti dengan URL Cloudflare Pages Anda
+DROPBOX_REDIRECT_URI=http://localhost:3000/api/auth/dropbox/callback
+
+# Supabase Credentials
+# Dapatkan dari https://supabase.com/dashboard/project/YOUR_PROJECT/settings/api
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_KEY=your_supabase_service_key
