--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
+    "build:cf": "npm run prepare && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "prepare": "nuxt prepare",
+    "postinstall": "node -e \"if(!process.env.CF_PAGES) require('child_process').execSync('nuxt prepare', {stdio:'inherit'})\""
   },
   "dependencies": {
     "@nuxt/content": "^2.13.0",
