--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clsx": "^2.1.1",
     "dropbox": "^10.34.0",
     "lucide-vue-next": "^0.469.0",
-    "nuxt": "^3.15.0",
+    "nuxt": "3.15.4",
     "postcss": "^8.4.49",
     "reka-ui": "latest",
     "tailwind-merge": "^2.6.0",
