feat: Implement comprehensive file management with virtual folders, bulk actions, admin/user file pages, new APIs, and updated configuration and documentation.

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
-# Dropbox API Credentials
-# Dapatkan dari https://www.dropbox.com/developers/apps
-
-# App Key (dari App Console)
-DROPBOX_APP_KEY=your_dropbox_app_key
-
-# App Secret (dari App Console)
-DROPBOX_APP_SECRET=your_dropbox_app_secret
-
-# OAuth Redirect URI (tambahkan ini juga di App Console -> Settings -> OAuth 2 -> Redirect URIs)
-# Untuk production, ganti dengan URL Cloudflare Pages Anda
-DROPBOX_REDIRECT_URI=http://localhost:3000/api/auth/dropbox/callback
-
-# Supabase Credentials
+# Supabase Configuration
 # Dapatkan dari https://supabase.com/dashboard/project/YOUR_PROJECT/settings/api
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_SERVICE_KEY=your_supabase_service_key
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_KEY=your-anon-public-key
+SUPABASE_SERVICE_KEY=your-service-role-key
+
+# Dropbox API Credentials (Optional - accounts dikelola via UI)
+# Dapatkan dari https://www.dropbox.com/developers/apps
+# DROPBOX_APP_KEY=your_dropbox_app_key
+# DROPBOX_APP_SECRET=your_dropbox_app_secret
+# DROPBOX_REDIRECT_URI=http://localhost:3000/api/auth/dropbox/callback
+
+# Application Settings
+NUXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Upload Settings
+ANONYMOUS_UPLOAD_PATH=/uploads
+
+# Optional: Session Configuration
+# NUXT_SESSION_PASSWORD=your-32-char-secret-key
