--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@iconify-json/logos": "^1.2.10",
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/radix-icons": "^1.2.1",
+    "@nuxt/devtools": "^3.1.1",
     "@nuxt/eslint": "^0.7.2",
     "@types/uuid": "^10.0.0",
     "typescript": "^5.7.2"
